# raytracer

./: .gitignore  CMakeLists.txt  README.md  image.ppm  main.c  ray.h  vec3.h
.cache/clangd/index/: main.c.A9C38C32F57FA312.idx  ray.c.842A8645188FD3E6.idx  ray.h.8D72439E1EEFD486.idx  vec3.c.CA971C0CC9D98367.idx  vec3.h.637AD02ED8DA9DD6.idx
include/: camera.h  geometry.h  interval.h  ray.h  utilities.h  vec3.h
src/: camera.c  geometry.c  interval.c  main.c  ray.c  utilities.c  vec3.c
